Fixes snippet images on mobile, updates blog buttons

--- a/source/stylesheets/_blog.scss
+++ b/source/stylesheets/_blog.scss
@@ -15,6 +15,10 @@
     color: rgb(83, 188, 145);
     }
   }
+
+  img {
+    max-width: 100%;
+  }
 }
 .article-body {
   border-top: 1px solid #f0f0f2;
