--- a/source/stylesheets/_utilities.scss
+++ b/source/stylesheets/_utilities.scss
@@ -12,6 +12,10 @@
   margin-right: 15px;
 }
 
+.margin-top {
+	margin-top: 3em;
+}
+
 //Alignment
 .center {
   text-align: center;
